<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DadosPrincipais">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/calmBlue"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonRefresh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="4dp"
        android:onClick="refresh"
        android:text="@string/buttonRefresh"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="375dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="-1dp"
        android:onClick="done"
        android:text="@string/buttonDone"
        app:layout_constraintEnd_toStartOf="@+id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/ScrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:id="@+id/linearLayoutVerticalMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linearLayoutHorizontal5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewChamadaTempo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_weight="1"
                    android:text="@string/textViewChamadaTempo"
                    android:textAlignment="viewStart"
                    android:textSize="15sp"
                    android:verticalScrollbarPosition="defaultPosition" />

                <TextView
                    android:id="@+id/textViewDadosTempo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15sp"
                    android:layout_weight="1"
                    android:text="@string/textViewDadosTempo"
                    android:textAlignment="viewEnd"
                    android:textColor="@color/calmBlue"
                    android:textSize="25sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayoutHorizontal0"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewChamadaSemMaoVolante"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_weight="1"
                    android:text="@string/textViewChamadaSemMaoVolante"
                    android:textAlignment="viewStart"
                    android:textSize="15sp"
                    android:verticalScrollbarPosition="defaultPosition" />

                <TextView
                    android:id="@+id/textViewDadoSemMaoVolante"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15sp"
                    android:layout_weight="1"
                    android:text="@string/textViewDadoSemMaoVolante"
                    android:textAlignment="viewEnd"
                    android:textColor="@color/calmBlue"
                    android:textSize="25sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayoutHorizontal1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewChamadaMaoVolante"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_weight="1"
                    android:text="@string/textViewChamadaUmaMaoVolante"
                    android:textAlignment="viewStart"
                    android:textSize="15sp"
                    android:verticalScrollbarPosition="defaultPosition" />

                <TextView
                    android:id="@+id/textViewDadoMaoVolante"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15sp"
                    android:layout_weight="1"
                    android:text="@string/textViewDadoUmaMaoVolante"
                    android:textAlignment="viewEnd"
                    android:textColor="@color/calmBlue"
                    android:textSize="25sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayoutHorizontal2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewChamadaVelocidade"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_weight="1"
                    android:text="@string/textViewChamadaVelocidade"
                    android:textAlignment="viewStart"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/textViewDadoVelocidade"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15sp"
                    android:layout_weight="1"
                    android:text="@string/textViewDadoVelocidade"
                    android:textAlignment="viewEnd"
                    android:textColor="@color/calmBlue"
                    android:textSize="25sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayoutHorizontal3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewChamadaEmerg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_weight="1"
                    android:text="@string/textViewChamadaEmerg"
                    android:textAlignment="viewStart"
                    android:textAllCaps="false"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/textViewDadoEmerg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15sp"
                    android:layout_weight="1"
                    android:text="@string/textViewDadoEmerg"
                    android:textAlignment="viewEnd"
                    android:textColor="@color/calmBlue"
                    android:textSize="25sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayoutHorizontal4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewChamadaTempMotor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_weight="1"
                    android:text="@string/textViewChamadaTempMotor"
                    android:textAlignment="viewStart"
                    android:textAllCaps="false"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/textViewDadosTempMotor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15sp"
                    android:layout_weight="1"
                    android:text="@string/textViewDadosTempMotor"
                    android:textAlignment="viewEnd"
                    android:textColor="@color/calmBlue"
                    android:textSize="25sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:id="@+id/textViewNomeGraph"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:text="@string/textViewGraph"
                android:textAlignment="center"
                android:textColor="#1762A0"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/linearLayoutHorinzontalGraph"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <com.jjoe64.graphview.GraphView
                    android:id="@+id/graphVel"
                    android:layout_width="match_parent"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="12dp"
                    android:layout_height="200dip"
                    />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="TextView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewError"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="35dp"
        android:text="TextView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ScrollView"
        android:lines="2"/>

</android.support.constraint.ConstraintLayout>